--- a/tack.csproj
+++ b/tack.csproj
@@ -52,6 +52,9 @@
     <Reference Include="Nini">
       <HintPath>lib\nini\Bin\Mono\1.1\Release\Nini.dll</HintPath>
     </Reference>
+    <Reference Include="Nustache.Core">
+      <HintPath>ext\nustache\Nustache.Core\bin\Release\Nustache.Core.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
