Rename Tack cmd class into TackCmd.

--- a/tack.csproj
+++ b/tack.csproj
@@ -68,10 +68,10 @@
     <Compile Include="plugins\Command.cs" />
     <Compile Include="core\Tack.cs" />
     <Compile Include="tests\TackTest.cs" />
-    <Compile Include="plugins\base\Tack.cs" />
     <Compile Include="core\Tacker.cs" />
     <Compile Include="core\Page.cs" />
     <Compile Include="core\DictUtils.cs" />
+    <Compile Include="plugins\base\TackCmd.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
