Fix reading “foreign” variables by wrapping all data providers.

--- a/tack.csproj
+++ b/tack.csproj
@@ -74,7 +74,7 @@
     <Compile Include="plugins\base\TackCmd.cs" />
     <Compile Include="core\TackApp.cs" />
     <Compile Include="core\DataProvider.cs" />
-    <Compile Include="core\DataProviderWrapper.cs" />
+    <Compile Include="core\DictWrapper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
