--- a/tack.csproj
+++ b/tack.csproj
@@ -34,11 +34,9 @@
     <Reference Include="System" />
     <Reference Include="nunit.core, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
       <Private>False</Private>
-      <Package>mono-nunit</Package>
     </Reference>
     <Reference Include="nunit.framework, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
       <Private>False</Private>
-      <Package>mono-nunit</Package>
     </Reference>
     <Reference Include="NGit">
       <HintPath>lib\NGit.dll</HintPath>
@@ -60,6 +58,9 @@
     </Reference>
     <Reference Include="YamlDotNet.RepresentationModel">
       <HintPath>lib\yamldotnet\YamlDotNet.RepresentationModel.dll</HintPath>
+    </Reference>
+    <Reference Include="MarkdownSharp">
+      <HintPath>lib\markdownsharp\bin\Release\MarkdownSharp.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
