Move filesystem IO stuff to utils/Files.cs, fix, and add tests.

--- a/tack.csproj
+++ b/tack.csproj
@@ -81,6 +81,8 @@
     <Compile Include="core\AssetFilter.cs" />
     <Compile Include="core\LessFilter.cs" />
     <Compile Include="utils\Collections.cs" />
+    <Compile Include="utils\Files.cs" />
+    <Compile Include="tests\FilesTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
