--- a/tack.csproj
+++ b/tack.csproj
@@ -1,96 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{3385196D-7276-47F2-B291-6BC7253169A6}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Tack</RootNamespace>
-    <AssemblyName>tack</AssemblyName>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug</OutputPath>
-    <DefineConstants>DEBUG;</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x86</PlatformTarget>
-    <Externalconsole>true</Externalconsole>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <DebugType>none</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Release</OutputPath>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x86</PlatformTarget>
-    <Externalconsole>true</Externalconsole>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="nunit.core, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="nunit.framework, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="NGit">
-      <HintPath>lib\NGit.dll</HintPath>
-    </Reference>
-    <Reference Include="NSch">
-      <HintPath>lib\NSch.dll</HintPath>
-    </Reference>
-    <Reference Include="Sharpen">
-      <HintPath>lib\Sharpen.dll</HintPath>
-    </Reference>
-    <Reference Include="Nini">
-      <HintPath>lib\nini\Bin\Mono\1.1\Release\Nini.dll</HintPath>
-    </Reference>
-    <Reference Include="Nustache.Core">
-      <HintPath>ext\nustache\Nustache.Core\bin\Release\Nustache.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="YamlDotNet.Core">
-      <HintPath>lib\yamldotnet\YamlDotNet.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="YamlDotNet.RepresentationModel">
-      <HintPath>lib\yamldotnet\YamlDotNet.RepresentationModel.dll</HintPath>
-    </Reference>
-    <Reference Include="MarkdownSharp">
-      <HintPath>lib\markdownsharp\bin\Release\MarkdownSharp.dll</HintPath>
-    </Reference>
-    <Reference Include="dotless.Core">
-      <HintPath>lib\dotless\dotless.Core.dll</HintPath>
-    </Reference>
+    <PackageReference Include="dotless.Core" Version="1.6.7" />
+    <PackageReference Include="markdownsharp" Version="2.0.5" />
+    <PackageReference Include="ngit" Version="1.0.0.20110815" />
+    <PackageReference Include="nunit" Version="3.12.0" />
+    <PackageReference Include="nustache" Version="1.16.0.10" />
+    <PackageReference Include="yamldotnet" Version="6.1.2" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="plugins\base\Help.cs" />
-    <Compile Include="plugins\Command.cs" />
-    <Compile Include="tests\TackTest.cs" />
-    <Compile Include="core\Tacker.cs" />
-    <Compile Include="core\Page.cs" />
-    <Compile Include="plugins\base\Serve.cs" />
-    <Compile Include="plugins\base\TackCmd.cs" />
-    <Compile Include="core\TackApp.cs" />
-    <Compile Include="core\DataProvider.cs" />
-    <Compile Include="core\DictWrapper.cs" />
-    <Compile Include="core\AssetFilter.cs" />
-    <Compile Include="core\LessFilter.cs" />
-    <Compile Include="utils\Collections.cs" />
-    <Compile Include="utils\Files.cs" />
-    <Compile Include="tests\FilesTest.cs" />
-    <Compile Include="core\RenderContext.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-    <Folder Include="plugins\" />
-    <Folder Include="plugins\base\" />
-    <Folder Include="core\" />
-    <Folder Include="tests\" />
-    <Folder Include="utils\" />
-  </ItemGroup>
+
 </Project>
