--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,9 +22,13 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v -coverprofile=coverage.out ./...
+
+    - name: Prepare Coverage reports
+      run: go get github.com/jandelgado/gcov2lcov && go run github.com/jandelgado/gcov2lcov -infile=coverage.out -outfile=coverage.lcov
 
     - name: Coveralls
       uses: coverallsapp/github-action@master
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
+        path-to-lcov: ${{ github.workspace }}/coverage.lcov
